src/objects/Bed_Night__c.object
<CustomObject>
    <fields>
        <fullName>Batch_Bednights__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to support batch entry.</description>
        <inlineHelpText>Used to support batch entry.</inlineHelpText>
        <label>Batch - Bednights</label>
        <referenceTo>bde__Batch__c</referenceTo>
        <relationshipLabel>Bed Nights</relationshipLabel>
        <relationshipName>Bed_Nights</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bednight_Date__c</fullName>
        <label>Bednight Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bednight_Notes__c</fullName>
        <description>If a someone leaves/returns during their stay and we cannot count the bednight, enter brief reason here.</description>
        <inlineHelpText>If a someone leaves/returns during their stay and we cannot count the bednight, enter brief reason here.</inlineHelpText>
        <label>Bednight Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Case_Record__c</fullName>
        <description>Parent Case Record</description>
        <inlineHelpText>Parent Case Record</inlineHelpText>
        <label>Case Record</label>
        <referenceTo>Case_Record__c</referenceTo>
        <relationshipLabel>Bed Nights</relationshipLabel>
        <relationshipName>Bed_Nights</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Present__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Was the participant present at the shelter?</description>
        <inlineHelpText>Was the participant present at the shelter?</inlineHelpText>
        <label>Present</label>
        <type>Checkbox</type>
    </fields>
    <label>Bed Night</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Case_Record__c</columns>
        <columns>Present__c</columns>
        <columns>Bednight_Date__c</columns>
        <columns>Bednight_Notes__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BD-{00000}</displayFormat>
        <label>Bed Night Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bed Nights</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>